# xxbot

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.kilocode/rules/: search-tool.md
plans/: DiscordBOT-Python-架构设计文档.md  DiscordBOT-首发实施计划.md  stage10-discord-interaction-design.md  修仙文字BOT全新设计方案.md  功法系统修正设计.md  无尽副本与掉落系统重构设计.md  背包与锻造重构实施方案.md  装备与法宝掉落链路缺失分析.md  装备与法宝阶数系统设计.md
src/: main.py
src/application/: __init__.py
src/application/battle/: __init__.py  auto_battle_service.py  battle_replay_service.py
src/application/breakthrough/: __init__.py  difficulty_service.py  material_trial_service.py  panel_service.py  reward_service.py  trial_service.py
src/application/character/: __init__.py  cultivation_panel_service.py  current_attribute_service.py  growth_service.py  (+7 more)
src/bot/: __init__.py  bootstrap.py
src/domain/: __init__.py
tests/: test_settings.py
tests/integration/: test_breakthrough_service.py  test_character_growth_service.py  test_character_progression_service.py  test_endless_service.py  test_equipment_service.py  test_healing_query_service.py  test_retreat_service.py  test_stage10_breakthrough_battle_replay.py  test_stage10_character_creation_entry.py  test_stage10_character_panel_embed.py  test_stage10_endless_panel_flow.py  test_stage10_equipment_panel_flow.py  test_stage10_panel_timeout.py  test_stage10_pvp_breakthrough_panel_embed.py  test_stage10_pvp_panel_public_broadcast.py  test_stage13_special_affix_skeleton.py  test_stage8_leaderboard_service.py  test_stage8_score_service.py  test_stage9_pvp_service.py
(+131 files in other folders)
