[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xxbot-next"
version = "1.0.0"
description = "修仙题材 Discord 文字 BOT 首发版本"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "xxbot-next" },
]
dependencies = [
    "discord.py>=2.4,<3.0",
    "SQLAlchemy>=2.0.29,<3.0",
    "alembic>=1.13.1,<2.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "psycopg[binary]>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[project.scripts]
xianbot = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"infrastructure.config.static.files" = ["*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
